--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- header start -->
     <header>
-        <section class="container">
+        <section class="container fixed-top">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
                     <a class="navbar-brand" href="#">
@@ -31,13 +33,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Shoes</a>
+                                <a class="nav-link" href="#shoe">Shoes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Bagpack</a>
+                                <a class="nav-link" href="#bagpack">Bagpack</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Subscribe</a>
+                                <a class="nav-link" href="#subscribe">Subscribe</a>
                             </li>
 
                         </ul>
@@ -50,14 +52,14 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                        <div class="row info-background bg-gradient d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.
                                 </p>
                                 <h1>$420</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -65,14 +67,14 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                        <div class="row info-background bg-gradient d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the Headphone in the world for people who just want to waste time in front of
                                     tv.
                                 </p>
                                 <h1>$420</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -80,7 +82,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                        <div class="row info-background bg-gradient d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room
                                 </h1>
@@ -88,7 +90,7 @@
                                     of fake sports.
                                 </p>
                                 <h1>$600</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -111,7 +113,7 @@
     </header>
     <main>
         <!-- Catagories -->
-        <section class="container my-5">
+        <section class="container my-5 catagories">
             <div class="row g-4">
                 <div class="col-lg-4 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -135,9 +137,110 @@
                 </div>
             </div>
         </section>
+        <!-- Shoes section  -->
+        <section class="container" id="shoe">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                        </div>
+                        <div class="p-3">
+                            <button class="panda-btn-buy-now">Buy Now
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                        </div>
+                        <div class="p-3">
+                            <button class="panda-btn-buy-now">Buy Now
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                        </div>
+                        <div class="p-3">
+                            <button class="panda-btn-buy-now">Buy Now
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- bags section  -->
+        <section class="container my-4" id="bagpack">
+            <h2>Bagpack</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                        </div>
+                        <div class="p-3">
+                            <button class="panda-btn-buy-now">Buy Now
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                        </div>
+                        <div class="p-3">
+                            <button class="panda-btn-buy-now">Buy Now
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                        </div>
+                        <div class="p-3">
+                            <button class="panda-btn-buy-now">Buy Now
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- subscribe  -->
+        <section style="height: 300px;"
+            class="container panda-bg-info d-flex justify-content-center align-items-center rounded-3" id="subscribe">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control" type="text" placeholder="Your Email">
+                <br>
+                <button class="panda-btn-buy-now mt-3">SUBMIT</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <p><small>©2025. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
     <!-- bootstrap script -->
